--- a/api/static/css/main.scss
+++ b/api/static/css/main.scss
@@ -220,7 +220,7 @@
                     display: inline-block;
                     float: right;
                     margin: 16px 20px;
-                    margin-left: 5px;
+                    margin-left: 0;
                     font-weight: 800;
                 }
                 &:hover {
