--- a/api/static/css/media.scss
+++ b/api/static/css/media.scss
@@ -124,6 +124,14 @@
     }
     
     @media only screen and (max-width: 480px) {
+        .main-header{
+            .header-cell{
+                .user-section {
+                    padding: 20px 10px;
+                    padding-left: 0;
+                }
+            }
+        }
         .single-icon {
             clear: both;
             float: left!important;
